# ecount_kitt

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  PROPOSAL_DRAFT.md
analysis-도입제안서/: 00-summary.md  01-claude-draft.md  02-codex-review.md  03-claude-revised.md  README.md
analysis-도입제안서/source/: AI자동화봇_도입제안서.html
chrome-extension/: CLAUDE_SHARED_CONTEXT.md  background.js  manifest.json  package.json  webpack.config.js
chrome-extension/content-scripts/: ecount-injector.js  ecount-observer.js
chrome-extension/lib/: ai-ocr.js  document-generator.js  ecount-api.js  email-composer.js  excel-parser.js  pdf-parser.js  pg-settlement.js  storage.js
chrome-extension/sidepanel/: app.js  index.html  styles.css
platform/: docker-compose.yml
platform/backend/: Dockerfile  alembic.ini  pyproject.toml
platform/backend/alembic/: env.py
platform/backend/app/: config.py  database.py  main.py
platform/backend/app/models/: __init__.py  account.py  company.py  deposit.py  inventory.py  purchases.py  report.py  sales.py  workflow.py
platform/backend/app/routers/: accounts.py  inventory.py  purchases.py  reports.py  sales.py  workflows.py
platform/backend/app/services/: ai_service.py  ecount_client.py  email_service.py  excel_service.py  pdf_service.py  report_engine.py
platform/backend/app/tasks/: daily_summary.py  scheduler.py  weekly_ar.py
platform/frontend/: Dockerfile  package.json
proposal-플랫폼제안서/: 01-claude-draft.md  02-codex-review.md  03-claude-revised.md  README.md
proposal-플랫폼제안서/source/: CNC코리아_AI플랫폼_도입제안서.html
(+15 files in other folders)
