[project]
name = "cnc-korea-erp-backend"
version = "1.0.0"
description = "CNC코리아 이카운트 ERP 자동화 백엔드"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "pymupdf>=1.23",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "python-multipart>=0.0.7",
    "aiosmtplib>=3.0",
    "jinja2>=3.1",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
